@@ -43,13 +43,6 @@ MODULE = Gimp	PACKAGE = Gimp
 
 PROTOTYPES: ENABLE
 
-BOOT:
-#ifdef ENABLE_NLS
-	setlocale (LC_MESSAGES, ""); /* calling twice doesn't hurt, no? */
-        bindtextdomain ("gimp-perl", datadir "/locale");
-        textdomain ("gimp-perl");
-#endif
-
 void
 _exit()
 	CODE:
@@ -61,6 +54,13 @@ _exit()
 	raise(9)
 #endif
 	abort();
+
+#ifdef ENABLE_NLS
+
+BOOT:
+	setlocale (LC_MESSAGES, ""); /* calling twice doesn't hurt, no? */
+        bindtextdomain ("gimp-perl", datadir "/locale");
+        textdomain ("gimp-perl");
 
 char *
 bindtextdomain(d,dir)
@@ -84,6 +84,53 @@ char *
 __(s)
 	char *	s
         PROTOTYPE: $
+
+#else
+
+char *
+bindtextdomain(d,dir)
+	char *	d
+	char *	dir
+        CODE:
+        RETVAL = "";
+	OUTPUT:
+        RETVAL
+
+char *
+textdomain(d)
+	char *	d
+        CODE:
+        RETVAL = "";
+	OUTPUT:
+        RETVAL
+
+char *
+gettext(s)
+	char *	s
+        CODE:
+        RETVAL = s;
+	OUTPUT:
+        RETVAL
+
+char *
+dgettext(d,s)
+	char *	d
+	char *	s
+        CODE:
+        RETVAL = s;
+	OUTPUT:
+        RETVAL
+
+char *
+__(s)
+	char *	s
+        PROTOTYPE: $
+        CODE:
+        RETVAL = s;
+	OUTPUT:
+        RETVAL
+
+#endif
 
 void
 xs_exit(status)
