@@ -51,7 +51,7 @@ require      Exporter;
 
 use Gimp;
 
-$VERSION=1.16;
+$VERSION=1.18;
 
 ##############################################################################
 =pod
